fix(Datamapper): Add missing background-color into SourceTargetView

--- a/packages/ui/src/components/View/SourceTargetView.scss
+++ b/packages/ui/src/components/View/SourceTargetView.scss
@@ -26,5 +26,6 @@
     flex-flow: column;
     border-radius: var(--pf-t--global--border--radius--small);
     border: 1px solid var(--pf-t--global--border--color--default);
+    background-color: var(--pf-t--global--background--color--primary--default);
   }
 }
